Chore: toString 메소드 제거